--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,231 +6,241 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MainActivity">
-
-            <Button
-                android:id="@+id/button5"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="211dp"
-                tools:layout_editor_absoluteY="638dp" />
-
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="211dp"
-                tools:layout_editor_absoluteY="550dp" />
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="211dp"
-                tools:layout_editor_absoluteY="464dp" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="211dp"
-                tools:layout_editor_absoluteY="380dp" />
-
-            <TextView
-                android:layout_width="400dp"
-                android:layout_height="250dp"
-                android:text="0"
-                android:textColor="@color/purple_500"
-                android:textSize="190dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.454"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.072" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="211dp"
-                tools:layout_editor_absoluteY="294dp" />
-
-            <Button
-                android:id="@+id/button11"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="313dp"
-                tools:layout_editor_absoluteY="296dp" />
-
-            <Button
-                android:id="@+id/button12"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="313dp"
-                tools:layout_editor_absoluteY="380dp" />
-
-            <Button
-                android:id="@+id/button13"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="313dp"
-                tools:layout_editor_absoluteY="464dp" />
-
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="313dp"
-                tools:layout_editor_absoluteY="553dp" />
-
-            <Button
-                android:id="@+id/button15"
-                android:layout_width="84dp"
-                android:layout_height="77dp"
-                android:text="Button"
-                tools:layout_editor_absoluteX="313dp"
-                tools:layout_editor_absoluteY="638dp" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:text="Button"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="638dp" />
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:text="Button"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="553dp" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:text="Button"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="464dp" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:text="Button"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="378dp" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="84dp"
-            android:layout_height="77dp"
-            android:text="Button"
-            tools:layout_editor_absoluteX="106dp"
-            tools:layout_editor_absoluteY="293dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/acbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="293dp" />
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="AC"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="5dp" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/plusbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="378dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="+"
+        android:textSize="30dp"
+        app:layout_constraintStart_toEndOf="@+id/btn3"
+        app:layout_constraintTop_toBottomOf="@+id/minbtn" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/minbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="464dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="-"
+        android:textSize="45dp"
+        app:layout_constraintStart_toEndOf="@+id/btn6"
+        app:layout_constraintTop_toBottomOf="@+id/mulbtn" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/mulbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="553dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="x"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="@+id/btn9"
+        app:layout_constraintTop_toBottomOf="@+id/divbtn" />
 
     <Button
-        android:id="@+id/button10"
-        android:layout_width="84dp"
+        android:id="@+id/eqbtn"
+        android:layout_width="189dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="638dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="="
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/point"
+        app:layout_constraintTop_toBottomOf="@+id/plusbtn" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn3"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="638dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="3"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn2"
+        app:layout_constraintTop_toBottomOf="@+id/btn6" />
+
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn6"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="553dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="6"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn5"
+        app:layout_constraintTop_toBottomOf="@+id/btn9" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn9"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="464dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="9"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn8"
+        app:layout_constraintTop_toBottomOf="@+id/perc" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/point"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="378dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="."
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/zerobtn"
+        app:layout_constraintTop_toBottomOf="@+id/btn2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn2"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="5dp"
-        tools:layout_editor_absoluteY="293dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="2"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn1"
+        app:layout_constraintTop_toBottomOf="@+id/btn5" />
+
+    <Button
+        android:id="@+id/delbtn"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        android:text="DEL"
+        android:textSize="25dp"
+        app:layout_constraintStart_toEndOf="@+id/acbtn"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btn5"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="5"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn4"
+        app:layout_constraintTop_toBottomOf="@+id/btn8" />
+
+    <Button
+        android:id="@+id/btn8"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="8"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/btn7"
+        app:layout_constraintTop_toBottomOf="@+id/delbtn" />
+
+    <Button
+        android:id="@+id/zerobtn"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="0"
+        android:textSize="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn1"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="5"
+        android:textSize="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn4"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <Button
+        android:id="@+id/btn4"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="4"
+        android:textSize="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn7"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="7"
+        android:textSize="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/acbtn"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <Button
+        android:id="@+id/divbtn"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="÷"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/perc"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/perc"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/purple_200"
+        android:text="%"
+        android:textSize="35dp"
+        app:layout_constraintStart_toEndOf="@+id/delbtn"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="400dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="128dp"
+        android:text="0"
+        android:textColor="@color/purple_200"
+        android:textSize="90dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
