Did some work on java code.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -12,7 +13,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#111111"
+        android:textColor="@color/purple_200"
         android:text="AC"
         android:textSize="25dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -24,7 +26,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#111111"
+        android:textColor="@color/purple_200"
         android:text="+"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/btn3"
@@ -36,7 +39,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#111111"
+        android:textColor="@color/purple_200"
         android:text="-"
         android:textSize="45dp"
         app:layout_constraintStart_toEndOf="@+id/btn6"
@@ -48,7 +52,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#111111"
+        android:textColor="@color/purple_200"
         android:text="x"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/btn9"
@@ -60,7 +65,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="#111111"
+        android:textColor="@color/purple_200"
         android:text="="
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/point"
@@ -72,7 +78,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="3"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn2"
@@ -85,7 +92,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="6"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn5"
@@ -97,7 +105,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="9"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn8"
@@ -109,7 +118,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="."
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/zerobtn"
@@ -121,7 +131,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="2"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn1"
@@ -133,7 +144,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_red_dark"
+        android:backgroundTint="#111111"
+        android:textColor="#FF0000"
         android:text="DEL"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/acbtn"
@@ -145,7 +157,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint="#111111"
+        android:textColor="#808080"
         android:text="5"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn4"
@@ -157,7 +170,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint="#111111"
+        android:textColor="#808080"
         android:text="8"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn7"
@@ -168,7 +182,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="0"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn1"
@@ -179,7 +194,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="1"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn4"
@@ -190,7 +206,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="4"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn7"
@@ -201,7 +218,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@android:color/darker_gray"
+        android:backgroundTint=" #111111"
+        android:textColor="#808080"
         android:text="7"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/acbtn"
@@ -213,7 +231,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint=" #111111"
+        android:textColor="@color/purple_200"
         android:text="÷"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
@@ -225,7 +244,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint=" #111111"
+        android:textColor="@color/purple_200"
         android:text="%"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
@@ -234,10 +254,9 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="400dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="92dp"
-        android:text="0"
+        android:layout_marginTop="136dp"
         android:textColor="@color/purple_200"
         android:textSize="90dp"
         app:layout_constraintStart_toStartOf="parent"
