--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,13 +61,14 @@
 
     <Button
         android:id="@+id/eqbtn"
-        android:layout_width="184dp"
+        android:layout_width="77dp"
         android:layout_height="77dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="116dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
+        android:background="@drawable/shape"
+        android:backgroundTint="@color/purple_200"
         android:text="="
+        android:textColor="@color/white"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/point"
         app:layout_constraintTop_toBottomOf="@+id/plusbtn" />
@@ -78,8 +79,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="3"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn2"
@@ -92,8 +93,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="6"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn5"
@@ -105,8 +106,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="9"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn8"
@@ -118,8 +119,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="."
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/zerobtn"
@@ -131,8 +132,8 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="2"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn1"
@@ -158,7 +159,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="#808080"
+        android:textColor="@color/white"
         android:text="5"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn4"
@@ -171,7 +172,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="#808080"
+        android:textColor="@color/white"
         android:text="8"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/btn7"
@@ -182,8 +183,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="0"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn1"
@@ -194,8 +195,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="1"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn4"
@@ -206,8 +207,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="4"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/btn7"
@@ -218,8 +219,8 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint=" #111111"
-        android:textColor="#808080"
+        android:backgroundTint="#111111"
+        android:textColor="@color/white"
         android:text="7"
         android:textSize="35dp"
         app:layout_constraintTop_toBottomOf="@+id/acbtn"
@@ -244,21 +245,31 @@
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint=" #111111"
+        android:backgroundTint="#111111"
         android:textColor="@color/purple_200"
         android:text="%"
-        android:textSize="35dp"
+        android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="400dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="136dp"
+        android:layout_marginTop="196dp"
         android:textColor="@color/purple_200"
-        android:textSize="90dp"
+        android:textSize="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="170dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="140dp"
+        android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
