--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,28 @@
 
 
     <Button
+        android:id="@+id/ansbtn"
+        android:layout_width="84dp"
+        android:layout_height="77dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#111111"
+        android:text="ANS"
+        android:textColor="@color/purple_200"
+        android:textSize="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn1"
+        tools:layout_editor_absoluteX="5dp" />
+
+    <Button
         android:id="@+id/acbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
         android:text="AC"
-        android:textSize="25dp"
+        android:textColor="@color/purple_200"
+        android:textSize="23dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="4dp" />
+        tools:layout_editor_absoluteX="5dp" />
 
     <Button
         android:id="@+id/plusbtn"
@@ -61,9 +73,9 @@
 
     <Button
         android:id="@+id/eqbtn"
-        android:layout_width="77dp"
-        android:layout_height="77dp"
-        android:layout_marginStart="116dp"
+        android:layout_width="74dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/shape"
         android:backgroundTint="@color/purple_200"
@@ -120,11 +132,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/white"
         android:text="."
+        android:textColor="@color/white"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/zerobtn"
-        app:layout_constraintTop_toBottomOf="@+id/btn2" />
+        app:layout_constraintTop_toBottomOf="@+id/btn3" />
 
     <Button
         android:id="@+id/btn2"
@@ -143,12 +155,12 @@
         android:id="@+id/delbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
-        android:textColor="#FF0000"
         android:text="DEL"
-        android:textSize="25dp"
+        android:textColor="@color/purple_200"
+        android:textSize="23dp"
         app:layout_constraintStart_toEndOf="@+id/acbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -182,13 +194,14 @@
         android:id="@+id/zerobtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/white"
         android:text="0"
+        android:textColor="@color/white"
         android:textSize="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn1"
-        tools:layout_editor_absoluteX="5dp" />
+        app:layout_constraintStart_toEndOf="@+id/ansbtn"
+        app:layout_constraintTop_toBottomOf="@+id/btn2" />
 
     <Button
         android:id="@+id/btn1"
@@ -226,15 +239,26 @@
         app:layout_constraintTop_toBottomOf="@+id/acbtn"
         tools:layout_editor_absoluteX="5dp" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="400dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="212dp"
+        android:textColor="@color/purple_200"
+        android:textSize="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/divbtn"
         android:layout_width="84dp"
         android:layout_height="77dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint=" #111111"
-        android:textColor="@color/purple_200"
         android:text="÷"
+        android:textColor="@color/purple_200"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -244,33 +268,23 @@
         android:layout_width="84dp"
         android:layout_height="77dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
         android:text="%"
+        android:textColor="@color/purple_200"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="400dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="196dp"
-        android:textColor="@color/purple_200"
-        android:textSize="60dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="170dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="148dp"
         android:textSize="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
