--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#111111"
     tools:context=".MainActivity">
 
 
@@ -16,7 +17,7 @@
         android:backgroundTint="#111111"
 
         android:text="x^3"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@+id/sqbtn"
         tools:layout_editor_absoluteX="4dp" />
@@ -29,7 +30,7 @@
         android:backgroundTint="#111111"
         android:text="x^2"
 
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@+id/sqrtbtn"
         tools:layout_editor_absoluteX="5dp" />
@@ -42,7 +43,7 @@
         android:layout_marginTop="2dp"
         android:backgroundTint="#111111"
         android:text="√"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="22dp"
         app:layout_constraintTop_toBottomOf="@+id/perc"
         tools:layout_editor_absoluteX="4dp" />
@@ -55,7 +56,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="CE"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/acbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -68,7 +69,7 @@
         android:layout_marginTop="2dp"
         android:backgroundTint="#111111"
         android:text="ANS"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/zerobtn"
         app:layout_constraintTop_toBottomOf="@+id/plusbtn" />
@@ -81,7 +82,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="AC"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -94,7 +95,7 @@
         android:layout_marginTop="2dp"
         android:backgroundTint="#111111"
         android:text="+"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="22dp"
         app:layout_constraintStart_toEndOf="@+id/minbtn"
         app:layout_constraintTop_toBottomOf="@+id/mulbtn" />
@@ -107,7 +108,7 @@
         android:layout_marginTop="2dp"
         android:backgroundTint="#111111"
         android:text="-"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="24dp"
         app:layout_constraintStart_toEndOf="@+id/btn9"
         app:layout_constraintTop_toBottomOf="@+id/divbtn" />
@@ -120,7 +121,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="x"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="13dp"
         app:layout_constraintStart_toEndOf="@+id/divbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -132,7 +133,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
         android:background="@drawable/shape"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/red"
         android:text="="
         android:textColor="@color/white"
         android:textSize="22dp"
@@ -213,7 +214,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="DEL"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -302,7 +303,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="56dp"
         android:layout_marginTop="8dp"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="35dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -315,7 +316,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="÷"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="22dp"
         app:layout_constraintStart_toEndOf="@+id/cebtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -327,7 +328,7 @@
         android:layout_marginTop="4dp"
         android:backgroundTint="#111111"
         android:text="%"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:layout_editor_absoluteX="5dp" />
