--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#111111"
     tools:context=".MainActivity">
 
 
@@ -15,7 +16,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
         android:text="ANS"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="23dp"
         app:layout_constraintTop_toBottomOf="@+id/btn1"
         tools:layout_editor_absoluteX="5dp" />
@@ -27,7 +28,7 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
         android:text="AC"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="23dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:layout_editor_absoluteX="5dp" />
@@ -39,7 +40,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:text="+"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/btn3"
@@ -52,7 +53,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:text="-"
         android:textSize="45dp"
         app:layout_constraintStart_toEndOf="@+id/btn6"
@@ -65,7 +66,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:backgroundTint="#111111"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:text="x"
         android:textSize="20dp"
         app:layout_constraintStart_toEndOf="@+id/btn9"
@@ -78,7 +79,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/shape"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/red"
         android:text="="
         android:textColor="@color/white"
         android:textSize="35dp"
@@ -159,7 +160,7 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
         android:text="DEL"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="23dp"
         app:layout_constraintStart_toEndOf="@+id/acbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -245,7 +246,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="212dp"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -256,9 +257,9 @@
         android:layout_height="77dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint=" #111111"
+        android:backgroundTint="#111111"
         android:text="÷"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="35dp"
         app:layout_constraintStart_toEndOf="@+id/perc"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -271,7 +272,7 @@
         android:layout_marginTop="12dp"
         android:backgroundTint="#111111"
         android:text="%"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/red"
         android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/delbtn"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
