--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 <!--    <color name="red">#FF0000</color>-->
-    <color name="red">#0047AB</color>
+<!--    <color name="red">#0047AB</color>-->
+    <color name="red">#C63232</color>
     <color name="grey">#808080</color>
 
 </resources>
